--- a/APIRestAssured/pom.xml
+++ b/APIRestAssured/pom.xml
@@ -40,5 +40,17 @@
       <artifactId>allure-testng</artifactId>
       <version>2.29.1</version>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.12.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>4.0.0-M1</version>
+    </dependency>
   </dependencies>
 </project>
